# gostpy

./: .gitignore  LICENSE  MANIFEST.in  Pipfile  README.md  TODO  pyproject.toml  requirements.txt  write_deps.py
.github/workflows/: gostpy-app.yml  lint.yml
docs/: dependencies.md
gmoverid_cmos_sizing/: __init__.py  cell_sizing.py  io.json  load_data.py  main.py  switch_sizing.py  utils.py  varactor_sizing.py
gmoverid_cmos_sizing/data/input/ncell/: vsb-100-m_w-2-3-u_l-30-n_sweep-vgs-vds.csv  vsb-200-m_w-2-3-u_l-30-n_sweep-vgs-vds.csv  vsb-400-m_w-2-3-u_l-60-n_sweep-vgs-vds.csv  vsb-600-m_w-2-3-u_l-60-n_sweep-vgs-vds.csv
gmoverid_cmos_sizing/data/input/nvaractor/: w-2-3-u_vds-0_vsb-0_sweep-vgs-l.csv
gmoverid_cmos_sizing/data/input/pcell/: vbs-0_w-2-3-u_l-30-n_sweep-vsg-vsd.csv  vbs-0_w-2-3-u_l-60-n_sweep-vsg-vsd.csv  vbs-200-m_w-2-3-u_l-60-n_sweep-vsg-vsd.csv  vbs-300-m_w-2-3-u_l-60-n_sweep-vsg-vsd.csv  vbs-400-m_w-2-3-u_l-30-n_sweep-vsg-vsd.csv  vbs-500-m_w-2-3-u_l-60-n_sweep-vsg-vsd.csv  (+2 more)
gmoverid_cmos_sizing/data/luts/: ncell.csv  nswitch.csv  nvaractor.csv  pcell.csv  pvaractor.csv
resources/: specs.toml  sspecs.toml  vspecs.toml
resources/model/: multivariable-regression.ipynb
resources/residue_pamp_28nmtsmc/: bootstrap_design.toml  switches.json  switches.md  switches.tex
scripts/: black-formatting.sh
src/data/luts/: nvaractor.csv  pswitch.csv  pvaractor.csv
src/data/output/: devices.csv  devices.md  devices.tex  switches.json  switches.md  switches.tex  varactors.csv  varactors.json  varactors.md  varactors.tex
src/gost/: __init__.py  cell_sizing.py  gost.py  io.json  load_data.py  switch_sizing.py  utils.py  varactor_sizing.py
src/gover/: __init__.py  cell_sizing.py  gover.py  load_data.py  switch_sizing.py  varactor_sizing.py
tests/: test_gmoverid_cmos_sizing.py  test_gost.py  test_gover.py
(+34 files in other folders)
