[tool.poetry]
name = "gmoverid_cmos_sizing"
version = "0.1.0"
description = ""
authors = ["dasdias <das.dias6@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.22.4"
pandas = "^1.4.2"
argparse = "^1.4.0"
loguru = "^0.6.0"
tabulate = "^0.8.9"
modelling-utils = "^0.2.2"
[tool.poetry.dev-dependencies]
pytest = "^5.2"
unittest = "^0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"