[tool.poetry]
name = "gover"
version = "0.1.0"
description = ""
authors = ["dasdias <das.dias6@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.22.4"
pandas = "^1.4.2"
argparse = "^1.4.0"
loguru = "^0.6.0"
tabulate = "^0.8.9"
modelling-utils={git="https://github.com/das-dias/modelling_utils.git"}
pyfiglet = "^0.8.post1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
unittest = "^0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gover = "gover.gover:cli"