[tool.poetry]
name = "gost"
version = "0.1.1"
description = "GOST (Gm Over id Sizing Tool) is a tool dedicated to aiding Analog Design engineers in the process of sizing CMOS devices."
authors = ["dasdias <das.dias6@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.22.4"
pandas = "^1.4.2"
argparse = "^1.4.0"
loguru = "^0.6.0"
tabulate = "^0.8.9"
pyfiglet = "^0.8.post1"
modelling-utils = "^0.2.11"
colorama = "^0.4.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
unittest = "^0.0"
Markdown = "^3.3.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gost = "gost.gost:cli"